examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/kubecost/redirecthttps.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kubecost
spec:
  redirectScheme:
    scheme: https
    permanent: true
